# secure-demo-wallet

./: .gitignore  README.md  Taskfile.yml  bun.lockb
apps/wallet-api/: .cursorrules  .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
apps/wallet-api/src/: config.rs  main.rs
apps/wallet-api/src/app/: graphql.rs  mod.rs  resolvers.rs
apps/wallet-api/src/app/auth/: mod.rs
apps/wallet-api/src/app/services/: user.rs
apps/wallet-api/src/domain/: errors.rs  mod.rs
apps/wallet-api/src/domain/entities/: mod.rs  user.rs  wallet.rs
apps/wallet-api/src/domain/events/: mod.rs  transaction_sent.rs  user_created.rs  wallet_created.rs
apps/wallet-api/src/graphql/: schema.rs
apps/wallet-api/src/infrastructure/: jwt.rs  mod.rs  vault.rs
apps/wallet-api/src/infrastructure/models/: mod.rs  refresh_token.rs  user.rs
apps/wallet-api/src/infrastructure/repositories/: user.rs
apps/web/: .env.example  package.json
apps/web/src/: middleware.ts
apps/web/src/actions/: verifyEmailAction.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/wallets/: api.ts  page.tsx
apps/web/src/app/wallets/[walletId]/: api.ts  page.tsx
apps/web/src/app/wallets/[walletId]/addresses/[addressId]/: api.ts  page.tsx
apps/web/src/auth/: AuthContext.tsx  auth.services.ts  httpClient.ts
apps/web/src/components/: header.tsx  signup-form.tsx  spinner-cloud.tsx  submit-button.tsx
apps/web/src/config/: zkemailConfig.ts
apps/web/src/types/: actions.ts
apps/web/src/utils/: stringUtils.ts
